Polish, better level

--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -1,13 +1,13 @@
 [preset.0]
 
-name="HideousAnts"
+name="Ant Manager - The Colony Building Simulator!"
 platform="Windows Desktop"
 runnable=true
 custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="./EntityExperiment.exe"
+export_path="./AntManager.exe"
 script_export_mode=1
 script_encryption_key=""
 
@@ -31,11 +31,11 @@ codesign/timestamp_server_url=""
 codesign/digest_algorithm=1
 codesign/description=""
 codesign/custom_options=PoolStringArray(  )
-application/icon=""
+application/icon="res://assets/game_icon.ico"
 application/file_version=""
 application/product_version=""
-application/company_name=""
-application/product_name=""
+application/company_name="BUG Inc"
+application/product_name="Ant Manager"
 application/file_description=""
 application/copyright=""
 application/trademarks=""
@@ -49,7 +49,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="./EntityExperiment.x86_64"
+export_path="./AntManager.x86_64"
 script_export_mode=1
 script_encryption_key=""
 
