--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -32,8 +32,8 @@ codesign/digest_algorithm=1
 codesign/description=""
 codesign/custom_options=PoolStringArray(  )
 application/icon="res://assets/game_icon.ico"
-application/file_version=""
-application/product_version=""
+application/file_version="1.0.2"
+application/product_version="1.0.2"
 application/company_name="BUG Inc"
 application/product_name="Ant Manager"
 application/file_description=""
@@ -64,3 +64,36 @@ texture_format/s3tc=true
 texture_format/etc=false
 texture_format/etc2=false
 texture_format/no_bptc_fallbacks=true
+
+[preset.2]
+
+name="Mac OSX"
+platform="Mac OSX"
+runnable=true
+custom_features=""
+export_filter="all_resources"
+include_filter=""
+exclude_filter=""
+export_path="./AntManager.zip"
+script_export_mode=1
+script_encryption_key=""
+
+[preset.2.options]
+
+custom_template/debug=""
+custom_template/release=""
+application/name=""
+application/info="Made with Godot Engine"
+application/icon="res://assets/icon.png.import"
+application/identifier="antmanager.game"
+application/signature=""
+application/app_category="Games"
+application/short_version="1.0.2"
+application/version="1.0.2"
+application/copyright=""
+display/high_res=false
+privacy/camera_usage_description=""
+privacy/microphone_usage_description=""
+texture_format/s3tc=true
+texture_format/etc=false
+texture_format/etc2=false
